--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,3 @@
 [.ShellClassInfo]
 InfoTip=This folder is shared online.
-IconFile=C:\Program Files\Google\Drive\googledrivesync.exe
-IconIndex=16
-    
+IconResource=C:\Program Files\Google\Drive File Stream\52.0.6.0\GoogleDriveFS.exe,23
